// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Item /> should render as a button when no href, but a click handler is passed to the props 1`] = `
<MoreMenuItem
  className={null}
  href={null}
  label="Item Label"
  onClick={[Function]}
  testId={null}
>
  <button
    className="sg-1lse86s-root"
    data-test-id={null}
    onClick={[Function]}
    type="button"
  >
    <Text
      acceptPlainTextWithPlaceholders={false}
      className={null}
      params={{}}
      role={null}
      string="Item Label"
      transform={null}
    >
      Item Label
    </Text>
  </button>
</MoreMenuItem>
`;

exports[`<Item /> should render as a link when an href is passed to the props 1`] = `
<MoreMenuItem
  className={null}
  href="/some/link"
  label="Item Label"
  onClick={null}
  testId={null}
>
  <Link
    className="sg-1lse86s-root"
    href="/some/link"
    role="button"
  >
    <Text
      acceptPlainTextWithPlaceholders={false}
      className={null}
      params={{}}
      role={null}
      string="Item Label"
      transform={null}
    >
      Item Label
    </Text>
  </Link>
</MoreMenuItem>
`;
